--- a/span,div.html
+++ b/span,div.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <p>Lorem ipsum <span>dolor</span> sit amet consectetur adipisicing elit. Fugiat, in!</p>
-        <a href="you">this is content</a>
+      <p>
+        Lorem ipsum <span>dolor</span> sit amet consectetur adipisicing elit.
+        Fugiat, in! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Veritatis, quisquam.
+      </p>
+      <a href="you">this is content</a>
     </div>
-
-</body>
+  </body>
 </html>
